suite/tests/functions/invalid/func-misdeclared.c
int foo(int a);

int foo(int a, int b)
{
    return a + b;
}

int main(void)
{
}